com.braintribe.gm/query-parser/src/com/braintribe/model/processing/query/parser/impl/autogenerated/GmqlParser.java
// ============================================================================
// Copyright BRAINTRIBE TECHNOLOGY GMBH, Austria, 2002-2022
// 
// This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public
// License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
// 
// This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
// 
// You should have received a copy of the GNU Lesser General Public License along with this library; See http://www.gnu.org/licenses/.
// ============================================================================
package com.braintribe.model.processing.query.parser.impl.autogenerated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GmqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Boolean=1, Entity=2, TypeSignature=3, Enum=4, Select=5, Distinct=6, From=7, 
		Join=8, Full=9, Right=10, Left=11, Where=12, Null=13, Limit=14, Offset=15, 
		OrderBy=16, Ascending=17, Descending=18, GroupBy=19, Having=20, Property=21, 
		Of=22, AggCount=23, AggAvg=24, AggMin=25, AggMax=26, AggSum=27, ListIndex=28, 
		MapKey=29, Lower=30, Upper=31, ToStringToken=32, Concatenation=33, Localize=34, 
		Username=35, Star=36, Colon=37, FullText=38, Now=39, And=40, Not=41, Or=42, 
		Operator=43, LB=44, RB=45, LSB=46, RSB=47, LCB=48, RCB=49, COMMA=50, Dot=51, 
		StandardIdentifier=52, EscapedIdentifier=53, DateFunction=54, DateOffset=55, 
		TimeZoneOffset=56, DecimalLiteral=57, FloatLiteral=58, DoubleLiteral=59, 
		LongBase16Literal=60, LongBase10Literal=61, IntegerBase16Literal=62, IntegerBase10Literal=63, 
		StringOpen=64, WS=65, UnicodeEscape=66, EscB=67, EscT=68, EscN=69, EscF=70, 
		EscR=71, EscSQ=72, EscBS=73, PlainContent=74, StringClose=75, KeyWord=76, 
		EscapedIdentifierClose=77;
	public static final int
		RULE_evaluate = 0, RULE_query = 1, RULE_selectQuery = 2, RULE_selectQueryStart = 3, 
		RULE_selectQueryHead = 4, RULE_selectQuerySelection = 5, RULE_selectQuerySingleSelection = 6, 
		RULE_selectQueryFrom = 7, RULE_selectQuerySingleFrom = 8, RULE_selectQueryJoin = 9, 
		RULE_selectQueryTailGroupBy = 10, RULE_selectQueryTailHaving = 11, RULE_groupBy = 12, 
		RULE_groupByExpression = 13, RULE_havingCondition = 14, RULE_join = 15, 
		RULE_joinType = 16, RULE_innerJoin = 17, RULE_fullJoin = 18, RULE_leftJoin = 19, 
		RULE_rightJoin = 20, RULE_propertyQuery = 21, RULE_propertyQueryStart = 22, 
		RULE_propertyQueryHead = 23, RULE_entityQuery = 24, RULE_entityQueryStart = 25, 
		RULE_entityQueryHead = 26, RULE_queryTailWhere = 27, RULE_queryTailOrderBy = 28, 
		RULE_queryTailPagination = 29, RULE_aggregateFunction = 30, RULE_aggregateAvg = 31, 
		RULE_aggregateMin = 32, RULE_aggregateMax = 33, RULE_aggregateSum = 34, 
		RULE_aggregateCount = 35, RULE_orderBy = 36, RULE_orderBySingle = 37, 
		RULE_orderByDirection = 38, RULE_orderByExpression = 39, RULE_pagination = 40, 
		RULE_alias = 41, RULE_whereCondition = 42, RULE_booleanValueExpression = 43, 
		RULE_orPredicate = 44, RULE_andPredicate = 45, RULE_negationPredicate = 46, 
		RULE_booleanAtomicExpression = 47, RULE_parenthesizedBooleanValueExpression = 48, 
		RULE_booleanFunction = 49, RULE_fullTextComparison = 50, RULE_comparison = 51, 
		RULE_value = 52, RULE_generalValue = 53, RULE_variable = 54, RULE_collection = 55, 
		RULE_dateFunction = 56, RULE_now = 57, RULE_contextFunction = 58, RULE_username = 59, 
		RULE_stringFunction = 60, RULE_lower = 61, RULE_upper = 62, RULE_toStringRule = 63, 
		RULE_concatenation = 64, RULE_stringFunctionParameter = 65, RULE_localize = 66, 
		RULE_sourceProperty = 67, RULE_joinFunction = 68, RULE_listIndex = 69, 
		RULE_mapKey = 70, RULE_enumReference = 71, RULE_entityReference = 72, 
		RULE_typeSignature = 73, RULE_identifier = 74, RULE_genericIdentifier = 75, 
		RULE_escapedIdentifier = 76, RULE_literalValue = 77, RULE_dateValue = 78, 
		RULE_calendarOffsetValue = 79, RULE_dateOffset = 80, RULE_timeZoneOffset = 81, 
		RULE_stringValue = 82, RULE_escape = 83, RULE_plainContent = 84, RULE_nullValue = 85, 
		RULE_booleanValue = 86, RULE_decimalValue = 87, RULE_floatValue = 88, 
		RULE_doubleValue = 89, RULE_integerValue = 90, RULE_longValue = 91;
	public static final String[] ruleNames = {
		"evaluate", "query", "selectQuery", "selectQueryStart", "selectQueryHead", 
		"selectQuerySelection", "selectQuerySingleSelection", "selectQueryFrom", 
		"selectQuerySingleFrom", "selectQueryJoin", "selectQueryTailGroupBy", 
		"selectQueryTailHaving", "groupBy", "groupByExpression", "havingCondition", 
		"join", "joinType", "innerJoin", "fullJoin", "leftJoin", "rightJoin", 
		"propertyQuery", "propertyQueryStart", "propertyQueryHead", "entityQuery", 
		"entityQueryStart", "entityQueryHead", "queryTailWhere", "queryTailOrderBy", 
		"queryTailPagination", "aggregateFunction", "aggregateAvg", "aggregateMin", 
		"aggregateMax", "aggregateSum", "aggregateCount", "orderBy", "orderBySingle", 
		"orderByDirection", "orderByExpression", "pagination", "alias", "whereCondition", 
		"booleanValueExpression", "orPredicate", "andPredicate", "negationPredicate", 
		"booleanAtomicExpression", "parenthesizedBooleanValueExpression", "booleanFunction", 
		"fullTextComparison", "comparison", "value", "generalValue", "variable", 
		"collection", "dateFunction", "now", "contextFunction", "username", "stringFunction", 
		"lower", "upper", "toStringRule", "concatenation", "stringFunctionParameter", 
		"localize", "sourceProperty", "joinFunction", "listIndex", "mapKey", "enumReference", 
		"entityReference", "typeSignature", "identifier", "genericIdentifier", 
		"escapedIdentifier", "literalValue", "dateValue", "calendarOffsetValue", 
		"dateOffset", "timeZoneOffset", "stringValue", "escape", "plainContent", 
		"nullValue", "booleanValue", "decimalValue", "floatValue", "doubleValue", 
		"integerValue", "longValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'*'", "':'", null, null, null, null, null, null, "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "','", "'.'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Boolean", "Entity", "TypeSignature", "Enum", "Select", "Distinct", 
		"From", "Join", "Full", "Right", "Left", "Where", "Null", "Limit", "Offset", 
		"OrderBy", "Ascending", "Descending", "GroupBy", "Having", "Property", 
		"Of", "AggCount", "AggAvg", "AggMin", "AggMax", "AggSum", "ListIndex", 
		"MapKey", "Lower", "Upper", "ToStringToken", "Concatenation", "Localize", 
		"Username", "Star", "Colon", "FullText", "Now", "And", "Not", "Or", "Operator", 
		"LB", "RB", "LSB", "RSB", "LCB", "RCB", "COMMA", "Dot", "StandardIdentifier", 
		"EscapedIdentifier", "DateFunction", "DateOffset", "TimeZoneOffset", "DecimalLiteral", 
		"FloatLiteral", "DoubleLiteral", "LongBase16Literal", "LongBase10Literal", 
		"IntegerBase16Literal", "IntegerBase10Literal", "StringOpen", "WS", "UnicodeEscape", 
		"EscB", "EscT", "EscN", "EscF", "EscR", "EscSQ", "EscBS", "PlainContent", 
		"StringClose", "KeyWord", "EscapedIdentifierClose"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GmqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GmqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class EvaluateContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GmqlParser.EOF, 0); }
		public EvaluateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_evaluate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterEvaluate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitEvaluate(this);
		}
	}

	public final EvaluateContext evaluate() throws RecognitionException {
		EvaluateContext _localctx = new EvaluateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_evaluate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			query();
			setState(185);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public EntityQueryContext entityQuery() {
			return getRuleContext(EntityQueryContext.class,0);
		}
		public PropertyQueryContext propertyQuery() {
			return getRuleContext(PropertyQueryContext.class,0);
		}
		public SelectQueryContext selectQuery() {
			return getRuleContext(SelectQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			setState(190);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(187);
				entityQuery();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				propertyQuery();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(189);
				selectQuery();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryContext extends ParserRuleContext {
		public SelectQueryStartContext selectQueryStart() {
			return getRuleContext(SelectQueryStartContext.class,0);
		}
		public QueryTailWhereContext queryTailWhere() {
			return getRuleContext(QueryTailWhereContext.class,0);
		}
		public SelectQueryTailGroupByContext selectQueryTailGroupBy() {
			return getRuleContext(SelectQueryTailGroupByContext.class,0);
		}
		public SelectQueryTailHavingContext selectQueryTailHaving() {
			return getRuleContext(SelectQueryTailHavingContext.class,0);
		}
		public QueryTailOrderByContext queryTailOrderBy() {
			return getRuleContext(QueryTailOrderByContext.class,0);
		}
		public QueryTailPaginationContext queryTailPagination() {
			return getRuleContext(QueryTailPaginationContext.class,0);
		}
		public SelectQueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuery; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQuery(this);
		}
	}

	public final SelectQueryContext selectQuery() throws RecognitionException {
		SelectQueryContext _localctx = new SelectQueryContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectQuery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			selectQueryStart();
			setState(194);
			_la = _input.LA(1);
			if (_la==Where) {
				{
				setState(193);
				queryTailWhere();
				}
			}

			setState(197);
			_la = _input.LA(1);
			if (_la==GroupBy) {
				{
				setState(196);
				selectQueryTailGroupBy();
				}
			}

			setState(200);
			_la = _input.LA(1);
			if (_la==Having) {
				{
				setState(199);
				selectQueryTailHaving();
				}
			}

			setState(203);
			_la = _input.LA(1);
			if (_la==OrderBy) {
				{
				setState(202);
				queryTailOrderBy();
				}
			}

			setState(206);
			_la = _input.LA(1);
			if (_la==Limit || _la==Offset) {
				{
				setState(205);
				queryTailPagination();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryStartContext extends ParserRuleContext {
		public SelectQueryHeadContext selectQueryHead() {
			return getRuleContext(SelectQueryHeadContext.class,0);
		}
		public SelectQueryFromContext selectQueryFrom() {
			return getRuleContext(SelectQueryFromContext.class,0);
		}
		public SelectQueryJoinContext selectQueryJoin() {
			return getRuleContext(SelectQueryJoinContext.class,0);
		}
		public SelectQueryStartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQueryStart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQueryStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQueryStart(this);
		}
	}

	public final SelectQueryStartContext selectQueryStart() throws RecognitionException {
		SelectQueryStartContext _localctx = new SelectQueryStartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectQueryStart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			selectQueryHead();
			setState(209);
			selectQueryFrom();
			setState(211);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Join) | (1L << Full) | (1L << Right) | (1L << Left))) != 0)) {
				{
				setState(210);
				selectQueryJoin();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryHeadContext extends ParserRuleContext {
		public TerminalNode Select() { return getToken(GmqlParser.Select, 0); }
		public SelectQuerySelectionContext selectQuerySelection() {
			return getRuleContext(SelectQuerySelectionContext.class,0);
		}
		public TerminalNode Distinct() { return getToken(GmqlParser.Distinct, 0); }
		public SelectQueryHeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQueryHead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQueryHead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQueryHead(this);
		}
	}

	public final SelectQueryHeadContext selectQueryHead() throws RecognitionException {
		SelectQueryHeadContext _localctx = new SelectQueryHeadContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectQueryHead);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(213);
			match(Select);
			setState(215);
			_la = _input.LA(1);
			if (_la==Distinct) {
				{
				setState(214);
				match(Distinct);
				}
			}

			setState(217);
			selectQuerySelection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQuerySelectionContext extends ParserRuleContext {
		public TerminalNode Star() { return getToken(GmqlParser.Star, 0); }
		public List<SelectQuerySingleSelectionContext> selectQuerySingleSelection() {
			return getRuleContexts(SelectQuerySingleSelectionContext.class);
		}
		public SelectQuerySingleSelectionContext selectQuerySingleSelection(int i) {
			return getRuleContext(SelectQuerySingleSelectionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GmqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GmqlParser.COMMA, i);
		}
		public SelectQuerySelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuerySelection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQuerySelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQuerySelection(this);
		}
	}

	public final SelectQuerySelectionContext selectQuerySelection() throws RecognitionException {
		SelectQuerySelectionContext _localctx = new SelectQuerySelectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectQuerySelection);
		int _la;
		try {
			setState(228);
			switch (_input.LA(1)) {
			case Star:
				enterOuterAlt(_localctx, 1);
				{
				setState(219);
				match(Star);
				}
				break;
			case Boolean:
			case Entity:
			case TypeSignature:
			case Enum:
			case Null:
			case AggCount:
			case AggAvg:
			case AggMin:
			case AggMax:
			case AggSum:
			case ListIndex:
			case MapKey:
			case Lower:
			case Upper:
			case ToStringToken:
			case Concatenation:
			case Localize:
			case Username:
			case Colon:
			case FullText:
			case Now:
			case LB:
			case StandardIdentifier:
			case EscapedIdentifier:
			case DateFunction:
			case DecimalLiteral:
			case FloatLiteral:
			case DoubleLiteral:
			case LongBase16Literal:
			case LongBase10Literal:
			case IntegerBase16Literal:
			case IntegerBase10Literal:
			case StringOpen:
				enterOuterAlt(_localctx, 2);
				{
				setState(220);
				selectQuerySingleSelection();
				setState(225);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(221);
					match(COMMA);
					setState(222);
					selectQuerySingleSelection();
					}
					}
					setState(227);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQuerySingleSelectionContext extends ParserRuleContext {
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public SelectQuerySingleSelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuerySingleSelection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQuerySingleSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQuerySingleSelection(this);
		}
	}

	public final SelectQuerySingleSelectionContext selectQuerySingleSelection() throws RecognitionException {
		SelectQuerySingleSelectionContext _localctx = new SelectQuerySingleSelectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_selectQuerySingleSelection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(230);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQueryFromContext extends ParserRuleContext {
		public TerminalNode From() { return getToken(GmqlParser.From, 0); }
		public List<SelectQuerySingleFromContext> selectQuerySingleFrom() {
			return getRuleContexts(SelectQuerySingleFromContext.class);
		}
		public SelectQuerySingleFromContext selectQuerySingleFrom(int i) {
			return getRuleContext(SelectQuerySingleFromContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(GmqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(GmqlParser.COMMA, i);
		}
		public SelectQueryFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQueryFrom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQueryFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQueryFrom(this);
		}
	}

	public final SelectQueryFromContext selectQueryFrom() throws RecognitionException {
		SelectQueryFromContext _localctx = new SelectQueryFromContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_selectQueryFrom);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(232);
			match(From);
			setState(233);
			selectQuerySingleFrom();
			setState(238);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(234);
				match(COMMA);
				setState(235);
				selectQuerySingleFrom();
				}
				}
				setState(240);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectQuerySingleFromContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public AliasContext alias() {
			return getRuleContext(AliasContext.class,0);
		}
		public SelectQuerySingleFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectQuerySingleFrom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).enterSelectQuerySingleFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GmqlParserListener ) ((GmqlParserListener)listener).exitSelectQuerySingleFrom(this);
		}
	}
